Properties set on window.customElements can disappear due to GC https://bugs.webkit.org/show_bug.cgi?id=172575 <rdar://problem/32440668>

Reviewed by Saam Barati.

Source/WebCore:

Fixed the bug that JS wrapper of CustomElementsRegistry can erroneously get collected during GC
by keeping it alive as long as the global object is alive.

Test: fast/custom-elements/custom-element-registry-wrapper-should-stay-alive.html

* dom/CustomElementRegistry.cpp:
(WebCore::CustomElementRegistry::create):
(WebCore::CustomElementRegistry::CustomElementRegistry):
* dom/CustomElementRegistry.h:
(WebCore::CustomElementRegistry): Make this inherited from ContextDestructionObserver.
* dom/CustomElementRegistry.idl: Set GenerateIsReachable=ImplScriptExecutionContext in IDL. This will
make CustomElementRegistry reachable from the global object.
* page/DOMWindow.cpp:
(WebCore::DOMWindow::ensureCustomElementRegistry):

LayoutTests:

Added a regression test.

* fast/custom-elements/custom-element-registry-wrapper-should-stay-alive-expected.txt: Added.
* fast/custom-elements/custom-element-registry-wrapper-should-stay-alive.html: Added.


Canonical link: https://commits.webkit.org/203427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234578 268f45cc-cd09-0410-ab3c-d52691b4dbfc